# robotics

./: .gitignore  CMakeLists.txt  PLAN.md  package.xml
launch/: armadillo.launch  ex2.launch  ex2.launch2
robotics_github/ex2/: .gitignore  CMakeLists.txt  cam.py  package.xml
robotics_github/ex2/launch/: ex2.launch
robotics_github/ex2/msg/: Circle.msg
robotics_github/ex2/scripts/: arm.py  main.py  menu.py  menu.py.save  move_arm.py  move_to_red.py  object_cords_handler.py  waitable.py
robotics_github/ex2/world/: assg2.world
robotics_github/launch/: ex2.launch  ex2.launch.save
robotics_github/scripts/: MovementManager.py  arm.py  arm.py.save  cam.py  move.py  object_cords_handler.py  rotate.py
scripts/: MovementManager.py  \  arm.py  laser.py  laser_helper.py  menu.py  move_arm.py  move_imp.py  move_to_red.py  movetest.py  rotate.py  route.py
